[project]
name = "robust-queue"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Elias Hernandis", email = "elias@hernandis.me" }
]
requires-python = ">=3.11"
dependencies = [
    "django>=5.2",
]

[project.scripts]
robust-queue = "robust_queue:main"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py312"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["robust_queue*"]

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
    "psycopg[binary,pool]>=3.2.6",
    "ruff>=0.11.6",
]
